--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "~4.4.1",
     "forever-monitor": "^1.5.2",
     "lodash": "^3.3.0",
-    "netatmo": "^1.3.0"
+    "netatmo": "^1.3.0",
+    "node-flower-power": "^1.1.0"
   },
   "scripts": {
     "start": "node app.js"
